vlib/v/parser/tests/sql_no_db_expr_b.out
vlib/v/parser/tests/sql_no_db_expr_b.vv:3:11: error: invalid expression: unexpected token `:=`
    1 | fn x() {
    2 |     // SqlExpr
    3 |     x := sql :=
      |              ~~
    4 | }
